--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ author :
     github : https://github.com/asyncrun
     weibo : http://weibo.com
 
-image_dir: http://qiniucdn.zhaoxiaodan.com
-production_url : http://www.zhaoxiaodan.com
+image_dir: http://asyncrun.tech/
+production_url : http://asyncrun.tech/
 
 
 ######## for 3-Jekyll themes
